# ai-complaint-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
backend/: main.py
core/: __init__.py  config.py  schemas.py
core/agents/: __init__.py  base.py  classification.py  classifier.py  emotion.py  policy.py  reply.py  resolution.py  router.py  strategy.py
core/prompts/: __init__.py  base.py  templates.py
core/services/: __init__.py  logging.py  orchestrator.py
frontend/: app.py
tests/: test_orchestrator.py
