[project]
name = "ai-complaint-agent"
version = "0.1.0"
description = "Multi-agent LlamaIndex system for Arabic customer complaint analysis with Streamlit frontend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "llama-index>=0.11.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "streamlit>=1.39.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "types-requests",
    "mypy>=1.10.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["core*", "backend*", "frontend*"]

