[project]
name = "ai-complaint-agent"
version = "0.1.0"
description = "Multi-agent LlamaIndex system for Arabic customer complaint analysis with Streamlit frontend"
requires-python = ">=3.10,<4.0"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["core*", "backend*", "frontend*"]

